--- a/src/components/List/styles.module.scss
+++ b/src/components/List/styles.module.scss
@@ -1,4 +1,7 @@
 .list {
+  width: calc(100% - 40px);
+  max-width: 1280px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   gap: 24px;
