--- a/src/components/ListCard/styles.module.scss
+++ b/src/components/ListCard/styles.module.scss
@@ -60,6 +60,17 @@
       content: "\00B7";
     }
   }
+
+  @media (max-width: 768px) {
+    flex-wrap: wrap;
+
+    &Separator {
+      margin: 0 auto;
+      &::after {
+        display: none;
+      }
+    }
+  }
 }
 
 .jobLevel {
@@ -70,6 +81,7 @@
   border-radius: 100px;
   font-size: 0.8rem;
   font-weight: 600;
+  text-align: center;
 }
 
 .apply {
@@ -79,11 +91,17 @@
   border: 0 none;
   background-color: var(--color-text);
   color: var(--color-bg);
-  min-width: 96px;
+  min-width: 120px;
+  border-radius: 100px;
   transition: all 0.3s ease-in-out;
 
   &:hover {
     background-color: var(--color-blue-2);
     color: var(--color-white);
+  }
+
+  @media (max-width: 768px) {
+    margin-top: 12px;
+    width: 100%;
   }
 }
