--- a/src/components/List/styles.module.scss
+++ b/src/components/List/styles.module.scss
@@ -1,8 +1,6 @@
 .list {
-  width: calc(100% - 40px);
-  max-width: 1280px;
-  margin: 0 auto;
-  display: flex;
+  @include container;
+
   flex-direction: column;
   gap: 24px;
 }
